tests/paczka1/fuzzy1/42870849.err
Error in line 3: R4XI?1S A91 189,8
Error in line 1: R4XIF1S A91 93,5
Error in line 30: A623 S470 72,4
Error in line 37: A623 S357 69,1
